# penput

./: Cargo.toml  PRD.md  README.md
.github/workflows/: release-build.yml
ios/PenputIOSClient/: ContentView.swift  Info.plist  PenputIOSClientApp.swift  TouchPadView.swift  UdpTouchClient.swift  project.yml
ios/PenputIOSClient/Resources/Assets.xcassets/AppIcon.appiconset/: Contents.json
src/: connection.rs  http.rs  main.rs  mouse.rs  udp.rs  websocket.rs
static/: app.js  index.html  style.css  touchpad.js
