[package]
name = "penput"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {version = "1.48.0", features = ["full"]}
tokio-tungstenite = "0.21.0"
enigo = "0.6.1"
axum = "0.8.7"
tower = "0.5.2"
tower-http = {version = "0.6.8", features = ["fs", "trace"]}
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
mdns-sd = "0.17.1"
