[package]
name = "penput"
description = "Penput turns your mobile/tablet into a wireless touchpad for your PC."
version = "0.2.1"
license = "MIT"
edition = "2024"

[dependencies]
tokio = {version = "1.48.0", features = ["full"]}
tokio-tungstenite = "0.28.0"
enigo = "0.6.1"
axum = { version = "0.8.7", features = ["ws"] }
tower = "0.5.2"
tower-http = {version = "0.6.8", features = ["fs", "trace"]}
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
mdns-sd = "0.17.1"
anyhow = "1.0.93"
local-ip-address = "0.6.1"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
futures = "0.3.31"
axum-macros = "0.4.1"
display-info = "0.4.3"
